sandbox bugfixes for collections, pagination color contrast #126, mobile columns #113

--- a/services/fin/ucd-lib-client/client/public/elements/styles/dams-styles.css
+++ b/services/fin/ucd-lib-client/client/public/elements/styles/dams-styles.css
@@ -114,18 +114,9 @@ cork-pagination {
 h2 .fw-light {
   font-weight: var(--fw-regular);
 }
-.site-frame {
-  padding-right: 20px;
-  padding-left: 20px;
-}
 @media (min-width: 767px) {
 }
-@media (min-width: 1060px) {
-  .site-frame {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
+
 @media (min-width: 1601px) {
 
 }
